<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.jrvivanco.miagenda.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitulo"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/formulario"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:textColorHint="@color/colorAccent"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_nombre"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editFecha"
            android:hint="@string/hint_fecha_nac"
            android:textColorHint="@color/colorAccent"
            android:onClick="mostrarPicker"
            android:inputType="date"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_telefono"
        android:layout_below="@+id/layout_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefono"
            android:textColorHint="@color/colorAccent"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_below="@+id/layout_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="@color/colorAccent"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_descripcion"
        android:layout_below="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/editDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descripcion"
            android:textColorHint="@color/colorAccent"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_siguiente"
        android:layout_alignParentBottom="true"
        android:theme="@style/ButtonTheme"
        android:id="@+id/btnSiguiente"
        android:onClick="enviar"
        android:gravity="center"/>

</RelativeLayout>
